--- a/app/src/main/res/layout/presetlistlayout.xml
+++ b/app/src/main/res/layout/presetlistlayout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:weightSum="4"
     android:background="@color/colorPrimary"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_weight="1"
-            android:text="Unit Name:"
+            tools:text="Unit Name:"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="#000" />
 
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_weight="1"
-            android:text="1"
+            tools:text="1"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="#000" />
 
@@ -57,7 +57,7 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:text="Service"/>
+            tools:text="Service"/>
 
         <TextView
             android:layout_width="15dp"
@@ -66,7 +66,7 @@
             android:textStyle="bold"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="@color/white"
-            android:text="Price"/>
+            tools:text="Price"/>
 
         <TextView
             android:layout_width="10dp"
@@ -75,7 +75,7 @@
             android:textStyle="bold"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="@color/white"
-            android:text="Time Addded"/>
+            tools:text="Pulse"/>
 
     </LinearLayout>
 
