--- a/app/src/main/res/layout/views_consumable.xml
+++ b/app/src/main/res/layout/views_consumable.xml
@@ -95,6 +95,7 @@
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"
         android:background="@android:color/white"
-        android:listSelector="@android:color/darker_gray" />
+        android:listSelector="@android:color/darker_gray"
+        android:visibility="gone"/>
 
 </LinearLayout>
