--- a/app/src/main/res/layout/views_card.xml
+++ b/app/src/main/res/layout/views_card.xml
@@ -37,6 +37,7 @@
             android:textColor="@color/white"
             app:rippleColor="@color/black"
             android:layout_weight="1"
+            android:id="@+id/btnCardRemove"
             app:backgroundTint="#FF0000"
             android:layout_marginEnd="10dp" />
 
