--- a/app/src/main/res/layout/views_station.xml
+++ b/app/src/main/res/layout/views_station.xml
@@ -21,6 +21,7 @@
             android:layout_weight="1"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
+            android:id="@+id/btnStationAdd"
             android:layout_marginEnd="11dp" />
 
         <com.google.android.material.button.MaterialButton
@@ -35,6 +36,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="0dp"
             android:layout_marginEnd="10dp"
+            android:id="@+id/btnStationScan"
             android:text="Host Scan"
             android:contentDescription="@string/scan" />
 
@@ -47,6 +49,7 @@
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:textColor="@color/white"
             app:backgroundTint="#FF0000"
+            android:id="@+id/btnStationRemove"
             android:layout_marginEnd="0dp" />
 
 
