--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -150,7 +150,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <com.google.android.material.button.MaterialButton
             style1="@style/Widget.MaterialComponents.Button.UnelevatedButton"
@@ -163,7 +163,7 @@
             android:text="Forgot Password?"
             android:textAllCaps="true"
             android:textColor="#000000"
-            android:visibility="gone"
+            android:visibility="visible"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             />
     </RelativeLayout>
