--- a/app/src/main/res/layout/cardscandialog.xml
+++ b/app/src/main/res/layout/cardscandialog.xml
@@ -304,9 +304,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:theme="@style/EditTextTheme"
-                app:boxStrokeWidth="10dp"
-                app:errorEnabled="true"
-                >
+                app:boxStrokeWidth="10dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/serviceLevel1"
