--- a/app/src/main/res/layout/view_reports.xml
+++ b/app/src/main/res/layout/view_reports.xml
@@ -14,6 +14,7 @@
         android:orientation="horizontal">
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/dateReport"
             android:paddingStart="10dp"
             android:paddingEnd="0dp"
             android:layout_width="wrap_content"
