problema nga ito

--- a/app/src/main/res/layout/cardscandialog.xml
+++ b/app/src/main/res/layout/cardscandialog.xml
@@ -345,7 +345,7 @@
             <androidx.appcompat.widget.AppCompatSpinner
 
                 android:id="@+id/serviceType"
-                android:layout_width="118dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
