--- a/app/src/main/res/layout/stationhostscandialog.xml
+++ b/app/src/main/res/layout/stationhostscandialog.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ScrollView
-    android:padding="5dp"
+<LinearLayout android:padding="5dp"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <LinearLayout
@@ -20,28 +20,34 @@
         android:layout_width="wrap_content"
         android:id="@+id/textView1"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="25sp"
+        android:textColor="@color/black"
         android:text="Host Scanner"
         android:layout_marginTop="5dp"
+        android:fontFamily="@font/robotobold"
         android:layout_gravity="center"/>
 
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:text="Details"
+        android:textColor="@color/black"
+        android:fontFamily="@font/robotobold"
         android:layout_marginTop="5dp"
         android:layout_gravity="start"/>
 
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         android:id="@+id/hostType1"
         android:textStyle="bold"
         android:textSize="25sp"
-        android:text="manual"
+        android:text="Manual"
+        android:textColor="@color/black"
+        android:fontFamily="@font/robotobold"
         android:layout_marginTop="5dp"
         android:layout_gravity="start"/>
 
@@ -53,75 +59,126 @@
         android:layout_marginTop="20dp"
         android:weightSum="2">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/cardIdView1"
-        android:text="IP Address:"
-        android:textColor="@android:color/black"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:gravity="start"
-        android:layout_weight="1"
-        android:ems="10"/>
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:theme="@style/EditTextTheme"
+            app:boxStrokeWidth="10dp"
+            app:errorEnabled="true"
+            >
 
-    <EditText
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/ipAddress1"
-        android:layout_marginTop="15dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:gravity="start"
-        android:layout_weight="1"
-        android:ems="10"
-        android:hint="IP Address"/>
+            <com.google.android.material.textfield.TextInputEditText
+
+                android:id="@+id/ipAddress1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/opensansregular"
+                android:hint="IP Address"
+                android:inputType="text"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="15sp"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent" android:layout_marginTop="15dp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:theme="@style/EditTextTheme"
+                app:boxStrokeWidth="10dp"
+                app:errorEnabled="true"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/station"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/opensansregular"
+                    android:hint="Station Name"
+                    android:inputType="text"
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    android:textSize="15sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+        </LinearLayout>
+
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginTop="15dp">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/serviceTypeView1"
-        android:text="Unit Type:"
-        android:textColor="@android:color/black"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:gravity="start"
-        android:ems="10"/>
+        <TextView
+            android:layout_marginLeft="3dp"
+            android:id="@+id/serviceTypeView1"
+            android:layout_width="86dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:gravity="start"
+            android:text="Unit Type:"
+            android:fontFamily="@font/robotoregular"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@android:color/black" />
 
-    <Spinner
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:id="@+id/unitType1"
-        android:layout_marginTop="15dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:gravity="start"
-        android:ems="10"
-        android:tag="Sad"/>
+        <Spinner
+            android:id="@+id/unitType1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:tag="Sad"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 </LinearLayout>
+
 
 
     <LinearLayout
-        android:orientation="vertical"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent" android:layout_marginTop="15dp">
+        android:layout_gravity="center"
+        android:paddingBottom="10dp">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSubmit1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#02aff3"
+            android:text="Submit"
+            android:layout_gravity="center"
+            android:textColor="@android:color/white"
+            android:layout_marginRight="20dp"/>
 
-    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/serviceLevelView1" android:text="Station Name:" android:textColor="@android:color/black" android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="start" android:ems="10"/>
 
-    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/stationName1" android:layout_marginTop="15dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="start" android:ems="10" android:hint="Station Name" android:inputType="text"/>
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:id="@+id/btnCancel2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:strokeColor="#02aff3"
+            android:text="Close"
+            android:layout_gravity="center"
+            android:textColor="@android:color/black" />
+    </LinearLayout>
 
 </LinearLayout>
 
-    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btnSubmit1" android:text="Submit" android:layout_marginTop="10dp" android:layout_gravity="center" android:textColor="@android:color/white" android:background="@color/colorAccent"/>
-
-    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/btnCancel12" android:text="Close" android:layout_marginTop="10dp" android:layout_gravity="center" android:textColor="@android:color/black" android:background="@android:color/transparent"/>
-
 </LinearLayout>
-
-</ScrollView>
