--- a/app/src/main/res/layout/stationhostscandialog.xml
+++ b/app/src/main/res/layout/stationhostscandialog.xml
@@ -13,7 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:visibility="visible"
-        android:id="@+id/unregisteredLayout">
+        android:id="@+id/unregisteredLayout"
+        android:background="@drawable/circleddialog"
+        >
 
     <TextView
         android:layout_height="wrap_content"
