--- a/app/src/main/res/layout/cardscandialog.xml
+++ b/app/src/main/res/layout/cardscandialog.xml
@@ -323,19 +323,22 @@
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:weightSum="2"
             >
 
             <TextView
                 android:id="@+id/serviceTypeView1"
-                android:layout_width="107dp"
+                android:layout_width="15dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
                 android:ems="10"
+                android:layout_weight="1"
                 android:fontFamily="@font/robotoregular"
                 android:gravity="start"
                 android:text="Service Type"
@@ -343,14 +346,13 @@
                 android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatSpinner
-
                 android:id="@+id/serviceType"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
                 android:ems="10"
                 android:entries="@array/spinnerItems"
                 android:gravity="start"
+                android:layout_weight="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         </LinearLayout>
