--- a/app/src/main/res/layout/stationhostscandialog.xml
+++ b/app/src/main/res/layout/stationhostscandialog.xml
@@ -1,65 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout android:padding="5dp"
-    android:orientation="vertical"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:padding="5dp">
 
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:visibility="visible"
-        android:id="@+id/unregisteredLayout"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@drawable/circleddialog"
-        >
+        android:visibility="visible">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/textView1"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:textColor="@color/black"
-        android:text="Host Scanner"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/robotobold"
-        android:layout_gravity="center"/>
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/textView1"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:textColor="@color/black"
+            android:text="Host Scanner"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/robotobold"
+            android:layout_gravity="center"/>
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:text="Details"
-        android:textColor="@color/black"
-        android:fontFamily="@font/robotobold"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="start"/>
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:text="Details"
+            android:textColor="@color/black"
+            android:fontFamily="@font/robotobold"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="start"/>
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:visibility="gone"
-        android:id="@+id/hostType1"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:text="Manual"
-        android:textColor="@color/black"
-        android:fontFamily="@font/robotobold"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="start"/>
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:visibility="gone"
+            android:id="@+id/hostType1"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:text="Manual"
+            android:textColor="@color/black"
+            android:fontFamily="@font/robotobold"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="start"/>
 
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
-        android:weightSum="2">
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -71,7 +63,6 @@
             >
 
             <com.google.android.material.textfield.TextInputEditText
-
                 android:id="@+id/ipAddress1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,99 +79,93 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-</LinearLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:theme="@style/EditTextTheme"
+            app:boxStrokeWidth="10dp"
+            app:errorEnabled="true"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/station"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/opensansregular"
+                android:hint="Station Name"
+                android:inputType="text"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:textSize="15sp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent" android:layout_marginTop="15dp">
+            android:layout_width="match_parent"
+            android:layout_marginTop="15dp"
+            android:weightSum="2">
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:theme="@style/EditTextTheme"
-                app:boxStrokeWidth="10dp"
-                app:errorEnabled="true"
-                >
+            <TextView
+                android:layout_marginLeft="3dp"
+                android:id="@+id/serviceTypeView1"
+                android:layout_width="15dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:text="Unit Type:"
+                android:fontFamily="@font/robotoregular"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColor="@android:color/black" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/station"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:fontFamily="@font/opensansregular"
-                    android:hint="Station Name"
-                    android:inputType="text"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black"
-                    android:textSize="15sp" />
+            <Spinner
+                android:id="@+id/unitType1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:layout_weight="1"
+                android:tag="Sad"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginTop="15dp">
 
-        <TextView
-            android:layout_marginLeft="3dp"
-            android:id="@+id/serviceTypeView1"
-            android:layout_width="86dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:gravity="start"
-            android:text="Unit Type:"
-            android:fontFamily="@font/robotoregular"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@android:color/black" />
-
-        <Spinner
-            android:id="@+id/unitType1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:tag="Sad"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-</LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingBottom="10dp">
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSubmit1"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="#02aff3"
-            android:text="Submit"
             android:layout_gravity="center"
-            android:textColor="@android:color/white"
-            android:layout_marginRight="20dp"/>
+            android:paddingBottom="10dp">
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnSubmit1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#02aff3"
+                android:text="Submit"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:layout_marginRight="20dp"/>
 
 
-        <com.google.android.material.button.MaterialButton
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:id="@+id/btnCancel2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:strokeColor="#02aff3"
-            android:text="Close"
-            android:layout_gravity="center"
-            android:textColor="@android:color/black" />
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:id="@+id/btnCancel2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:strokeColor="#02aff3"
+                android:text="Close"
+                android:layout_gravity="center"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
+
     </LinearLayout>
-
-</LinearLayout>
 
 </LinearLayout>
