--- a/app/src/main/res/layout/views_preset.xml
+++ b/app/src/main/res/layout/views_preset.xml
@@ -20,6 +20,7 @@
             android:text="@string/add"
             style="?attr/buttonBarStyle"
             android:layout_weight="1"
+            android:id="@+id/btnAddPreset"
             android:textColor="@color/white"
             android:layout_marginEnd="11dp" />
 
